# inih_rust_migration

./: Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
examples/: deser.rs  serial.rs
src/: de.rs  lib.rs  main.rs  parse_ini.rs  ser.rs
tests/: integration.rs  output.ini  sample.ini
tests/test_data/: bom.ini  empty_values.ini  inline_comments.ini  multi_section.ini  multiline_inline_comment.ini  quoted_equals.ini  test_default.ini  test_multiline.ini
