[package]
name = "inih_rust_migration"
version = "0.1.0"
edition = "2021"
authors = ["John Aschenbrenner <leadthrustrength@gmail.com>"]
license = "MIT OR BSD-3-Clause"
description = "Rust port of the INIH C INI parser"
repository = "https://github.com/yourname/inih_rust_migration"
readme = "README.md"

[lib]
name = "inih_rust_migration"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_derive = "1"

